--- a/app/src/main/res/layout/welcome_3.xml
+++ b/app/src/main/res/layout/welcome_3.xml
@@ -35,12 +35,14 @@
 			android:orientation = "horizontal">
 
 			<RadioButton
+				android:id = "@+id/btn_man"
 				android:layout_width = "wrap_content"
 				android:layout_height = "wrap_content"
 				android:layout_marginRight = "30dp"
 				android:text = "남자"/>
 
 			<RadioButton
+				android:id = "@+id/btn_woman"
 				android:layout_width = "wrap_content"
 				android:layout_height = "wrap_content"
 				android:text = "여자"/>
