--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -28,22 +28,23 @@
 				android:text = "성별 수정"/>
 
 			<RadioGroup
+				android:id="@+id/gender_choice"
 				android:layout_width = "match_parent"
 				android:layout_height = "wrap_content"
 				android:layout_marginTop = "5dp"
-				android:checkedButton = "@+id/man"
+				android:checkedButton = "@+id/btn_man"
 				android:gravity = "center"
 				android:orientation = "horizontal">
 
 				<RadioButton
-					android:id = "@id/man"
+					android:id = "@id/btn_man"
 					android:layout_width = "wrap_content"
 					android:layout_height = "wrap_content"
 					android:layout_marginRight = "25dp"
 					android:text = "남자"/>
 
 				<RadioButton
-					android:id = "@+id/woman"
+					android:id = "@+id/btn_woman"
 					android:layout_width = "wrap_content"
 					android:layout_height = "wrap_content"
 					android:layout_marginLeft = "25dp"
@@ -57,25 +58,60 @@
 				android:layout_marginTop = "70dp"
 				android:text = "신체 정보 수정"/>
 
-			<EditText
-				android:layout_width = "200dp"
+			<!-- 키·체중 입력 부분 -->
+			<LinearLayout
+				android:layout_width = "250dp"
 				android:layout_height = "wrap_content"
-				android:layout_gravity = "center"
-				android:layout_marginTop = "5dp"
-				android:gravity = "right"
-				android:hint = "㎝"
-				android:inputType = "number"
-				android:text = ""/>
+				android:layout_margin = "20dp"
+				android:orientation = "vertical"
+				tools:background = "#FFFF00">
 
-			<EditText
-				android:layout_width = "200dp"
-				android:layout_height = "wrap_content"
-				android:layout_gravity = "center"
-				android:layout_marginTop = "5dp"
-				android:gravity = "right"
-				android:hint = "㎏"
-				android:inputType = "number"
-				android:text = ""/>
+				<LinearLayout
+					android:layout_width = "match_parent"
+					android:layout_height = "wrap_content"
+					android:layout_margin = "5dp">
+
+					<EditText
+						android:id = "@+id/edit_height"
+						android:layout_width = "0dp"
+						android:layout_height = "wrap_content"
+						android:layout_weight = "1"
+						android:gravity = "right"
+						android:hint = "키"
+						android:inputType = "number"
+						android:maxLines = "1"/>
+
+					<TextView
+						android:layout_width = "wrap_content"
+						android:layout_height = "wrap_content"
+						android:layout_weight = "0"
+						android:text = "(㎝)"
+						android:textSize = "15sp"/>
+				</LinearLayout>
+
+				<LinearLayout
+					android:layout_width = "match_parent"
+					android:layout_height = "wrap_content"
+					android:layout_margin = "5dp">
+
+					<EditText
+						android:id = "@+id/edit_weight"
+						android:layout_width = "0dp"
+						android:layout_height = "wrap_content"
+						android:layout_weight = "1"
+						android:gravity = "right"
+						android:hint = "체중"
+						android:inputType = "number"
+						android:maxLines = "1"/>
+
+					<TextView
+						android:layout_width = "wrap_content"
+						android:layout_height = "wrap_content"
+						android:layout_weight = "0"
+						android:text = "(㎏)"
+						android:textSize = "15sp"/>
+				</LinearLayout>
+			</LinearLayout>
 
 			<TextView
 				android:layout_width = "wrap_content"
