--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -32,12 +32,11 @@
 				android:layout_width = "match_parent"
 				android:layout_height = "wrap_content"
 				android:layout_marginTop = "5dp"
-				android:checkedButton = "@+id/btn_man"
 				android:gravity = "center"
 				android:orientation = "horizontal">
 
 				<RadioButton
-					android:id = "@id/btn_man"
+					android:id = "@+id/btn_man"
 					android:layout_width = "wrap_content"
 					android:layout_height = "wrap_content"
 					android:layout_marginRight = "25dp"
