--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -2,6 +2,7 @@
 <LinearLayout
 	xmlns:android = "http://schemas.android.com/apk/res/android"
 	xmlns:app = "http://schemas.android.com/apk/res-auto"
+	xmlns:tools = "http://schemas.android.com/tools"
 	android:layout_width = "match_parent"
 	android:layout_height = "180dp"
 	android:background = "@color/colorPrimaryDark"
@@ -24,12 +25,12 @@
 		android:layout_width = "match_parent"
 		android:layout_height = "wrap_content"
 		android:paddingTop = "10dp"
-		android:text = "신규 사용자"
+		android:text = "사용자 신체정보"
 		android:textAppearance = "@style/TextAppearance.AppCompat.Body1"/>
 
 	<TextView
-		android:id = "@+id/textView"
+		android:id = "@+id/txt_user_info"
 		android:layout_width = "wrap_content"
 		android:layout_height = "wrap_content"
-		android:text = "180 ㎝, 73 ㎏"/>
+		tools:text = "180 ㎝, 73 ㎏"/>
 </LinearLayout>
