--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -16,14 +16,16 @@
 
 	<ImageView
 		android:id = "@+id/imageView"
-		android:layout_width = "wrap_content"
-		android:layout_height = "wrap_content"
+		android:layout_width = "100dp"
+		android:layout_height = "0dp"
+		android:layout_weight = "1"
 		android:paddingTop = "10dp"
-		app:srcCompat = "@android:drawable/sym_def_app_icon"/>
+		tools:src = "@drawable/motion"/>
 
 	<TextView
 		android:layout_width = "match_parent"
 		android:layout_height = "wrap_content"
+		android:layout_weight = "0"
 		android:paddingTop = "10dp"
 		android:text = "사용자 신체정보"
 		android:textAppearance = "@style/TextAppearance.AppCompat.Body1"/>
@@ -32,5 +34,6 @@
 		android:id = "@+id/txt_user_info"
 		android:layout_width = "wrap_content"
 		android:layout_height = "wrap_content"
+		android:layout_weight = "0"
 		tools:text = "180 ㎝, 73 ㎏"/>
 </LinearLayout>
