달리기 모션 gif 수정

--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -16,9 +16,10 @@
 
 	<ImageView
 		android:id = "@+id/imageView"
-		android:layout_width = "100dp"
+		android:layout_width = "80dp"
 		android:layout_height = "0dp"
 		android:layout_weight = "1"
+		android:adjustViewBounds = "true"
 		android:paddingTop = "10dp"
 		tools:src = "@drawable/motion"/>
 
