Welcome 화면 최종 수정

--- a/app/src/main/res/layout/welcome_2.xml
+++ b/app/src/main/res/layout/welcome_2.xml
@@ -3,23 +3,41 @@
 	xmlns:android = "http://schemas.android.com/apk/res/android"
 	android:layout_width = "match_parent"
 	android:layout_height = "match_parent"
-	android:layout_margin = "20dp"
+	android:padding = "20dp"
 	android:gravity = "center"
 	android:orientation = "vertical">
 
 	<TextView
 		android:layout_width = "match_parent"
 		android:layout_height = "wrap_content"
-		android:layout_marginBottom = "15dp"
+		android:layout_marginBottom = "5dp"
 		android:gravity = "center"
-		android:text = "메뉴 레이아웃"
+		android:text = "기록 저장하기"
 		android:textColor = "@color/colorPrimary"
 		android:textSize = "20sp"
 		android:textStyle = "bold"/>
 
+	<TextView
+		android:layout_width = "match_parent"
+		android:layout_height = "wrap_content"
+		android:layout_marginBottom = "20dp"
+		android:gravity = "start"
+		android:text = "우상단 메뉴의 '기록 저장'을 누르면 지도에 나타난 이동 궤적을 저장할 수 있습니다."/>
+
 	<ImageView
 		android:layout_width = "match_parent"
 		android:layout_height = "wrap_content"
+		android:layout_marginBottom = "20dp"
+		android:layout_marginLeft = "50dp"
+		android:layout_marginRight = "50dp"
 		android:adjustViewBounds = "true"
-		android:src = "@drawable/explain_app_2"/>
+		android:src = "@drawable/welcome2_1"/>
+
+	<ImageView
+		android:layout_width = "match_parent"
+		android:layout_height = "wrap_content"
+		android:layout_marginLeft = "50dp"
+		android:layout_marginRight = "50dp"
+		android:adjustViewBounds = "true"
+		android:src = "@drawable/welcome2_2"/>
 </LinearLayout>
