--- a/app/src/main/res/layout/welcome_1.xml
+++ b/app/src/main/res/layout/welcome_1.xml
@@ -3,7 +3,7 @@
 	xmlns:android = "http://schemas.android.com/apk/res/android"
 	android:layout_width = "match_parent"
 	android:layout_height = "match_parent"
-	android:layout_margin = "20dp"
+	android:padding = "20dp"
 	android:gravity = "center"
 	android:orientation = "vertical">
 
@@ -12,21 +12,32 @@
 		android:layout_height = "wrap_content"
 		android:layout_marginBottom = "5dp"
 		android:gravity = "center"
-		android:text = "메인 화면 인터페이스"
-		android:textSize = "20sp"
+		android:text = "위치 기록하기"
 		android:textColor = "@color/colorPrimary"
+		android:textSize = "20sp"
 		android:textStyle = "bold"/>
 
 	<TextView
 		android:layout_width = "match_parent"
 		android:layout_height = "wrap_content"
-		android:text = "현재 속도와 소모한 칼로리 량을 볼 수 있습니다!"
-		android:gravity="center"
-		android:layout_marginBottom = "20dp"/>
+		android:layout_marginBottom = "20dp"
+		android:gravity = "start"
+		android:text = "상단 툴바의 ▶ 버튼을 누르면 현재 위치를 기록하기 시작하며, 순간 속도, 총 소모 칼로리, 경과 시간을 보여줍니다. 중지 버튼을 누르면 위치 기록을 중단합니다."/>
 
 	<ImageView
 		android:layout_width = "match_parent"
 		android:layout_height = "wrap_content"
+		android:layout_marginBottom = "20dp"
+		android:layout_marginLeft = "50dp"
+		android:layout_marginRight = "50dp"
 		android:adjustViewBounds = "true"
-		android:src = "@drawable/explain_app_1"/>
+		android:src = "@drawable/welcome1_1"/>
+
+	<ImageView
+		android:layout_width = "match_parent"
+		android:layout_height = "wrap_content"
+		android:layout_marginLeft = "50dp"
+		android:layout_marginRight = "50dp"
+		android:adjustViewBounds = "true"
+		android:src = "@drawable/welcome1_2"/>
 </LinearLayout>
